fix issues of horizontal scrollbar in Boilerplate #7680

--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/MainLayout.razor.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/MainLayout.razor.scss
@@ -26,6 +26,7 @@ main {
 }
 
 .main-content {
+    width: 100%;
     flex-grow: 1;
     display: flex;
     padding: 1rem;
